# Fluffy-pancake-simulations

./: LICENSE
Ballon&Particles/: balloon_simulation  balloon_simulation.cpp
Birds/: main  main.cpp
Collision/: blur.glsl  compile.sh  fluid_simulation  fluid_simulation.cpp  old_main.cpp
Gray-Scott_Model/: compile.sh  gray_scott  main.cpp
Ising2D/: system.hpp
Pendulum/: Pendulum_main.cpp  compile.sh  config.hpp  main  ode_sol.cpp  ode_sol.hpp  system.cpp  system.hpp  win_rend.cpp  win_rend.hpp
Pendulum/Double_Pendulum/: compile.sh  config.hpp  main  main.cpp  ode_solver.cpp  ode_solver.hpp  pendulum.cpp  pendulum.hpp  wind_rend.cpp  wind_rend.hpp
Percolation/: compile.sh  percolation.cpp
Viseck-Model/stable/: flock_simulation  main.cpp
Viseck-Model/test1-withSlider/: compile.sh  flock_simulation  main.cpp
Word Render/: CMakeLists.txt  README.md  compile_1.sh  compile_2.sh  main.cpp  main2.cpp
